crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__rrd_manifest__fetch_chunks_from_rrd_manifest.snap
---
source: crates/store/re_redap_tests/src/tests/rrd_manifest.rs
expression: printed
---
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                               │
│ * entity_path: /my/entity                                                                                                                               │
│ * heap_size_bytes: 1122                                                                                                                                 │
│ * id: chunk_00000000000000010000000000000001                                                                                                            │
│ * version: 0.1.2                                                                                                                                        │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────────────────────────┬──────────────────────┬────────────────────────────────────┬─────────────────────────────────────────┐ │
│ │ RowId                                         ┆ frame_nr             ┆ example.MyPoints:colors            ┆ example.MyPoints:points                 │ │
│ │ ---                                           ┆ ---                  ┆ ---                                ┆ ---                                     │ │
│ │ type: FixedSizeBinary[16]                     ┆ type: nullable i64   ┆ type: nullable List[nullable u32]  ┆ type: nullable List[nullable Struct[2]] │ │
│ │ ARROW:extension:metadata: {"namespace":"row"} ┆ index_name: frame_nr ┆ archetype: example.MyPoints        ┆ archetype: example.MyPoints             │ │
│ │ ARROW:extension:name: TUID                    ┆ is_sorted: true      ┆ component: example.MyPoints:colors ┆ component: example.MyPoints:points      │ │
│ │ is_sorted: true                               ┆ kind: index          ┆ component_type: example.MyColor    ┆ component_type: example.MyPoint         │ │
│ │ kind: control                                 ┆                      ┆ kind: data                         ┆ kind: data                              │ │
│ ╞═══════════════════════════════════════════════╪══════════════════════╪════════════════════════════════════╪═════════════════════════════════════════╡ │
│ │ row_00000000000000010000000000000001          ┆ 10                   ┆ [0]                                ┆ [{x: 0.0, y: 0.0}]                      │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_00000000000000010000000000000002          ┆ 20                   ┆ [1]                                ┆ [{x: 1.0, y: 1.0}]                      │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_00000000000000010000000000000003          ┆ 30                   ┆ [2]                                ┆ [{x: 2.0, y: 2.0}]                      │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_00000000000000010000000000000004          ┆ 40                   ┆ [3]                                ┆ [{x: 3.0, y: 3.0}]                      │ │
│ └───────────────────────────────────────────────┴──────────────────────┴────────────────────────────────────┴─────────────────────────────────────────┘ │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                              │
│ * entity_path: /my/entity                                                              │
│ * heap_size_bytes: 659                                                                 │
│ * id: chunk_00000000000000010000000000000002                                           │
│ * version: 0.1.2                                                                       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────────────────────────┬────────────────────────────────────┐ │
│ │ RowId                                         ┆ example.MyPoints:labels            │ │
│ │ ---                                           ┆ ---                                │ │
│ │ type: FixedSizeBinary[16]                     ┆ type: nullable List[nullable Utf8] │ │
│ │ ARROW:extension:metadata: {"namespace":"row"} ┆ archetype: example.MyPoints        │ │
│ │ ARROW:extension:name: TUID                    ┆ component: example.MyPoints:labels │ │
│ │ is_sorted: true                               ┆ component_type: example.MyLabel    │ │
│ │ kind: control                                 ┆ kind: data                         │ │
│ ╞═══════════════════════════════════════════════╪════════════════════════════════════╡ │
│ │ row_00000000000000010000000000000005          ┆ [simple]                           │ │
│ └───────────────────────────────────────────────┴────────────────────────────────────┘ │
└────────────────────────────────────────────────────────────────────────────────────────┘
