crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__rrd_manifest__layered_segment_rrd_manifest_1_all_there_sorbet_schema.snap
---
source: crates/store/re_redap_tests/src/tests/rrd_manifest.rs
expression: rrd_manifest.sorbet_schema.format_snapshot()
---
top-level metadata: [
    sorbet:version: "0.1.3"
]
/data:test: List(Float32) [
    rerun:component: "test"
    rerun:entity_path: "/data"
    rerun:is_static: "true"
    rerun:kind: "data"
]
/my/entity:example.MyPoints:colors: List(UInt32) [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:colors"
    rerun:component_type: "example.MyColor"
    rerun:entity_path: "/my/entity"
    rerun:kind: "data"
]
/my/entity:example.MyPoints:labels: List(Utf8) [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:labels"
    rerun:component_type: "example.MyLabel"
    rerun:entity_path: "/my/entity"
    rerun:is_static: "true"
    rerun:kind: "data"
]
/my/entity:example.MyPoints:points: List(Struct("x": non-null Float32, "y": non-null Float32)) [
    rerun:archetype: "example.MyPoints"
    rerun:component: "example.MyPoints:points"
    rerun:component_type: "example.MyPoint"
    rerun:entity_path: "/my/entity"
    rerun:kind: "data"
]
frame_nr: Int64 [
    rerun:index_name: "frame_nr"
    rerun:kind: "index"
]
rerun.controls.RowId: non-null FixedSizeBinary(16) [
    ARROW:extension:metadata: "{\"namespace\":\"row\"}"
    ARROW:extension:name: "rerun.datatypes.TUID"
    rerun:kind: "control"
]
