crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__rrd_manifest__layered_segment_rrd_manifest_2_base_removed_sorbet_schema.snap
---
source: crates/store/re_redap_tests/src/tests/rrd_manifest.rs
expression: rrd_manifest.sorbet_schema.format_snapshot()
---
top-level metadata: [
    sorbet:version: "0.1.3"
]
/data:test: List(Float32) [
    rerun:component: "test"
    rerun:entity_path: "/data"
    rerun:is_static: "true"
    rerun:kind: "data"
]
rerun.controls.RowId: non-null FixedSizeBinary(16) [
    ARROW:extension:metadata: "{\"namespace\":\"row\"}"
    ARROW:extension:name: "rerun.datatypes.TUID"
    rerun:kind: "control"
]
